Complete Initial Analysis

--- a/udacity_students.ipynb
+++ b/udacity_students.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -33,16 +33,16 @@
     "#     enrollments.append(row)\n",
     "# f.close()\n",
     "\n",
-    "with open('enrollments.csv', 'rb') as f:\n",
+    "with open('data/enrollments.csv', 'rb') as f:\n",
     "    reader = unicodecsv.DictReader(f)\n",
     "    enrollments = list(reader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -54,8 +54,13 @@
     "## and store the results in the below variables.\n",
     "## Then look at the first row of each table.\n",
     "\n",
-    "daily_engagement = \n",
-    "project_submissions = "
+    "with open('data/daily_engagement.csv') as f:\n",
+    "    reader = unicodecsv.DictReader(f)\n",
+    "    daily_engagement = list(reader)\n",
+    "    \n",
+    "with open('data/project_submissions.csv') as f:\n",
+    "    reader = unicodecsv.DictReader(f)\n",
+    "    project_submissions = list(reader)"
    ]
   },
   {
@@ -67,11 +72,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'account_key': u'448',\n",
+       " u'cancel_date': datetime.datetime(2015, 1, 14, 0, 0),\n",
+       " u'days_to_cancel': 65,\n",
+       " u'is_canceled': True,\n",
+       " u'is_udacity': True,\n",
+       " u'join_date': datetime.datetime(2014, 11, 10, 0, 0),\n",
+       " u'status': u'canceled'}"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from datetime import datetime as dt\n",
     "\n",
@@ -104,11 +124,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'acct': u'0',\n",
+       " u'lessons_completed': 0,\n",
+       " u'num_courses_visited': 1,\n",
+       " u'projects_completed': 0,\n",
+       " u'total_minutes_visited': 11.6793745,\n",
+       " u'utc_date': datetime.datetime(2015, 1, 9, 0, 0)}"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Clean up the data types in the engagement table\n",
     "for engagement_record in daily_engagement:\n",
@@ -123,11 +157,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'account_key': u'256',\n",
+       " u'assigned_rating': u'UNGRADED',\n",
+       " u'completion_date': datetime.datetime(2015, 1, 16, 0, 0),\n",
+       " u'creation_date': datetime.datetime(2015, 1, 14, 0, 0),\n",
+       " u'lesson_key': u'3176718735',\n",
+       " u'processing_state': u'EVALUATED'}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Clean up the data types in the submissions table\n",
     "for submission in project_submissions:\n",
@@ -148,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
@@ -159,7 +207,18 @@
     "#####################################\n",
     "\n",
     "## Find the total number of rows and the number of unique students (account keys)\n",
-    "## in each table."
+    "## in each table.\n",
+    "total_enrollment_records = len(enrollments)\n",
+    "total_daily_engagement_records = len(daily_engagement)\n",
+    "total_project_submission_records = len(project_submissions)\n",
+    "\n",
+    "unique_enrollments = set([enrollment.get('account_key') for enrollment in enrollments])\n",
+    "unique_daily_engagement = set([engagement.get('acct') for engagement in daily_engagement])\n",
+    "unique_project_submissions = set([submission.get('account_key') for submission in project_submissions])\n",
+    "\n",
+    "unique_enrollment_records = len(unique_enrollments)\n",
+    "unique_daily_engagement_records = len(unique_daily_engagement)\n",
+    "unique_project_submission_records = len(unique_project_submissions)"
    ]
   },
   {
@@ -171,17 +230,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "#####################################\n",
     "#                 3                 #\n",
     "#####################################\n",
     "\n",
-    "## Rename the \"acct\" column in the daily_engagement table to \"account_key\"."
+    "## Rename the \"acct\" column in the daily_engagement table to \"account_key\".\n",
+    "map(lambda x: x.update({'account_key': x.pop('acct')}), daily_engagement)\n",
+    "print daily_engagement[0].get('account_key')"
    ]
   },
   {
@@ -193,18 +260,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{u'status': u'canceled', u'is_udacity': False, u'is_canceled': True, u'join_date': datetime.datetime(2014, 11, 12, 0, 0), u'account_key': u'1219', u'cancel_date': datetime.datetime(2014, 11, 12, 0, 0), u'days_to_cancel': 0}\n"
+     ]
+    }
+   ],
    "source": [
     "#####################################\n",
     "#                 4                 #\n",
     "#####################################\n",
     "\n",
     "## Find any one student enrollments where the student is missing from the daily engagement table.\n",
-    "## Output that enrollment."
+    "## Output that enrollment.\n",
+    "\n",
+    "enrollments_missing_engagement = [enrollment for enrollment in enrollments if enrollment.get('account_key') not in unique_daily_engagement]\n",
+    "print enrollments_missing_engagement[0]"
    ]
   },
   {
@@ -216,18 +292,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "#####################################\n",
     "#                 5                 #\n",
     "#####################################\n",
     "\n",
     "## Find the number of surprising data points (enrollments missing from\n",
-    "## the engagement table) that remain, if any."
+    "## the engagement table) that remain, if any.\n",
+    "surprising_datapoints = [missing_engagement for missing_engagement in enrollments_missing_engagement if missing_engagement.get('join_date') != missing_engagement.get('cancel_date')]\n",
+    "print len(surprising_datapoints)"
    ]
   },
   {
@@ -239,11 +323,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a set of the account keys for all Udacity test accounts\n",
     "udacity_test_accounts = set()\n",
@@ -255,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -272,11 +365,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1622\n",
+      "135656\n",
+      "3634\n"
+     ]
+    }
+   ],
    "source": [
     "# Remove Udacity test accounts from all three tables\n",
     "non_udacity_enrollments = remove_udacity_accounts(enrollments)\n",
@@ -311,7 +412,7 @@
     "## haven't canceled yet or who remained enrolled for more than 7 days. The keys\n",
     "## should be account keys, and the values should be the date the student enrolled.\n",
     "\n",
-    "paid_students ="
+    "paid_students = {}"
    ]
   },
   {
@@ -608,9 +709,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
