--- a/udacity_students.ipynb
+++ b/udacity_students.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        " u'status': u'canceled'}"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        " u'utc_date': datetime.datetime(2015, 1, 9, 0, 0)}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        " u'processing_state': u'EVALUATED'}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "6"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -398,11 +398,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "995\n"
+     ]
+    }
+   ],
    "source": [
     "#####################################\n",
     "#                 6                 #\n",
@@ -412,7 +418,16 @@
     "## haven't canceled yet or who remained enrolled for more than 7 days. The keys\n",
     "## should be account keys, and the values should be the date the student enrolled.\n",
     "\n",
-    "paid_students = {}"
+    "paid_students = {}\n",
+    "for unique_enrollment in unique_enrollments:\n",
+    "    for enrollment in non_udacity_enrollments:\n",
+    "        if unique_enrollment == enrollment.get('account_key'):\n",
+    "            if (enrollment.get('days_to_cancel') is None) or (enrollment.get('days_to_cancel') > 7):\n",
+    "                if (unique_enrollment not in paid_students.keys()) or \\\n",
+    "                    (enrollment.get('join_date') > paid_students.get(unique_enrollment)):\n",
+    "                        paid_students.update({unique_enrollment: enrollment.get('join_date')})\n",
+    "            \n",
+    "print len(paid_students.keys())"
    ]
   },
   {
@@ -424,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -435,16 +450,22 @@
     "# of the student joining.\n",
     "def within_one_week(join_date, engagement_date):\n",
     "    time_delta = engagement_date - join_date\n",
-    "    return time_delta.days < 7"
+    "    return time_delta.days < 7 and time_delta.days >= 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6919\n"
+     ]
+    }
+   ],
    "source": [
     "#####################################\n",
     "#                 7                 #\n",
@@ -454,7 +475,14 @@
     "## the student is one of the paid students you just found, and the date is within\n",
     "## one week of the student's join date.\n",
     "\n",
-    "paid_engagement_in_first_week = "
+    "paid_engagement_in_first_week = []\n",
+    "for paid_student in paid_students.keys():\n",
+    "    for engagement in non_udacity_engagement:\n",
+    "        if paid_student == engagement.get('account_key'):\n",
+    "            if within_one_week(paid_students.get(paid_student), engagement.get('utc_date')):\n",
+    "                paid_engagement_in_first_week.append(engagement)\n",
+    "                \n",
+    "print len(paid_engagement_in_first_week)"
    ]
   },
   {
@@ -466,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -484,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -502,11 +530,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 306.708326753\n",
+      "Standard deviation: 412.996933409\n",
+      "Minimum: 0.0\n",
+      "Maximum: 3564.7332645\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -527,18 +564,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3564.7332645\n",
+      "{u'lessons_completed': 4, u'num_courses_visited': 4, u'total_minutes_visited': 850.519339666, u'projects_completed': 0, 'account_key': u'163', u'utc_date': datetime.datetime(2015, 7, 9, 0, 0)}\n",
+      "{u'lessons_completed': 6, u'num_courses_visited': 6, u'total_minutes_visited': 872.633923334, u'projects_completed': 0, 'account_key': u'163', u'utc_date': datetime.datetime(2015, 7, 10, 0, 0)}\n",
+      "{u'lessons_completed': 6, u'num_courses_visited': 2, u'total_minutes_visited': 777.018903666, u'projects_completed': 0, 'account_key': u'163', u'utc_date': datetime.datetime(2015, 7, 11, 0, 0)}\n",
+      "{u'lessons_completed': 2, u'num_courses_visited': 1, u'total_minutes_visited': 294.568774, u'projects_completed': 0, 'account_key': u'163', u'utc_date': datetime.datetime(2015, 7, 12, 0, 0)}\n",
+      "{u'lessons_completed': 1, u'num_courses_visited': 3, u'total_minutes_visited': 471.2139785, u'projects_completed': 0, 'account_key': u'163', u'utc_date': datetime.datetime(2015, 7, 13, 0, 0)}\n",
+      "{u'lessons_completed': 1, u'num_courses_visited': 2, u'total_minutes_visited': 298.778345333, u'projects_completed': 0, 'account_key': u'163', u'utc_date': datetime.datetime(2015, 7, 14, 0, 0)}\n",
+      "{u'lessons_completed': 0, u'num_courses_visited': 0, u'total_minutes_visited': 0.0, u'projects_completed': 0, 'account_key': u'163', u'utc_date': datetime.datetime(2015, 7, 15, 0, 0)}\n"
+     ]
+    }
+   ],
    "source": [
     "#####################################\n",
     "#                 8                 #\n",
     "#####################################\n",
     "\n",
     "## Go through a similar process as before to see if there is a problem.\n",
-    "## Locate at least one surprising piece of data, output it, and take a look at it."
+    "## Locate at least one surprising piece of data, output it, and take a look at it.\n",
+    "\n",
+    "student_max_minutes = None\n",
+    "max_minutes = 0\n",
+    "\n",
+    "for student, total_minutes in total_minutes_by_account.items():\n",
+    "    if total_minutes > max_minutes:\n",
+    "        max_minutes = total_minutes\n",
+    "        student_with_max_minutes = student\n",
+    "        \n",
+    "print max_minutes\n",
+    "\n",
+    "for engagement_record in paid_engagement_in_first_week:\n",
+    "    if engagement_record.get('account_key') == student_with_max_minutes:\n",
+    "        print engagement_record"
    ]
   },
   {
@@ -550,11 +614,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 1.63618090452\n",
+      "SD: 3.00256129983\n",
+      "Minimum: 0\n",
+      "Maximum: 36\n"
+     ]
+    }
+   ],
    "source": [
     "#####################################\n",
     "#                 9                 #\n",
@@ -562,7 +635,22 @@
     "\n",
     "## Adapt the code above to find the mean, standard deviation, minimum, and maximum for\n",
     "## the number of lessons completed by each student during the first week. Try creating\n",
-    "## one or more functions to re-use the code above."
+    "## one or more functions to re-use the code above.\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "lessons_completed_by_account = {}\n",
+    "for account_key, engagement_records in engagement_by_account.items():\n",
+    "    lessons_completed = 0\n",
+    "    for engagement_record in engagement_records:\n",
+    "        lessons_completed += engagement_record.get('lessons_completed')\n",
+    "    lessons_completed_by_account.update({account_key: lessons_completed})\n",
+    "    \n",
+    "total_lessons_completed = lessons_completed_by_account.values()\n",
+    "print '{}: {}'.format('Mean', np.mean(total_lessons_completed))\n",
+    "print '{}: {}'.format('SD', np.std(total_lessons_completed))\n",
+    "print '{}: {}'.format('Minimum', np.min(total_lessons_completed))\n",
+    "print '{}: {}'.format('Maximum', np.max(total_lessons_completed))"
    ]
   },
   {
@@ -574,34 +662,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 2.86733668342\n",
+      "SD: 2.25519800292\n",
+      "Minimum: 0\n",
+      "Maximum: 7\n"
+     ]
+    }
+   ],
    "source": [
     "######################################\n",
     "#                 10                 #\n",
     "######################################\n",
     "\n",
     "## Find the mean, standard deviation, minimum, and maximum for the number of\n",
-    "## days each student visits the classroom during the first week."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Splitting out Passing Students"
+    "## days each student visits the classroom during the first week.\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "courses_visited_by_account = {}\n",
+    "for account_key, engagement_records in engagement_by_account.items():\n",
+    "    courses_visited = 0\n",
+    "    for engagement_record in engagement_records:\n",
+    "        if engagement_record.get('num_courses_visited') > 0:\n",
+    "            courses_visited += 1\n",
+    "    courses_visited_by_account.update({account_key: courses_visited})\n",
+    "    \n",
+    "total_courses_visited = courses_visited_by_account.values()\n",
+    "print '{}: {}'.format('Mean', np.mean(total_courses_visited))\n",
+    "print '{}: {}'.format('SD', np.std(total_courses_visited))\n",
+    "print '{}: {}'.format('Minimum', np.min(total_courses_visited))\n",
+    "print '{}: {}'.format('Maximum', np.max(total_courses_visited))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "659\n",
+      "597\n",
+      "4583\n",
+      "4163\n"
+     ]
+    }
+   ],
    "source": [
     "######################################\n",
     "#                 11                 #\n",
@@ -613,9 +728,47 @@
     "## who do not.\n",
     "\n",
     "subway_project_lesson_keys = ['746169184', '3176718735']\n",
+    "subway_submissions_set = set([submission.get('account_key') for submission in non_udacity_submissions \\\n",
+    "                             if submission.get('lesson_key') in subway_project_lesson_keys])\n",
     "\n",
-    "passing_engagement =\n",
-    "non_passing_engagement ="
+    "passing_subway_accounts = []\n",
+    "non_passing_subway_accounts = []\n",
+    "\n",
+    "for subway_submission in subway_submissions_set:\n",
+    "    for submission in non_udacity_submissions:\n",
+    "        if submission.get('account_key') == subway_submission:\n",
+    "            if submission.get('assigned_rating') in ('PASSED', 'DISTINCTION'):\n",
+    "                passing_subway_accounts.append(subway_submission)\n",
+    "            else:\n",
+    "                non_passing_subway_accounts.append(subway_submission)\n",
+    "\n",
+    "passing_subway_accounts = set(passing_subway_accounts)\n",
+    "non_passing_subway_accounts = set(non_passing_subway_accounts)\n",
+    "            \n",
+    "print len(passing_subway_accounts)\n",
+    "print len(non_passing_subway_accounts)\n",
+    "            \n",
+    "passing_engagement = []\n",
+    "non_passing_engagement = []\n",
+    "\n",
+    "for paid_engagement in paid_engagement_in_first_week:\n",
+    "    for passing_submission in passing_subway_accounts:\n",
+    "        if passing_submission == paid_engagement.get('account_key'):\n",
+    "            passing_engagement.append(paid_engagement)\n",
+    "    \n",
+    "    for non_passing_submission in non_passing_subway_accounts:\n",
+    "        if non_passing_submission == paid_engagement.get('account_key'):\n",
+    "            non_passing_engagement.append(paid_engagement)\n",
+    "\n",
+    "print len(passing_engagement)\n",
+    "print len(non_passing_engagement)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting out Passing Students"
    ]
   },
   {
