Fix Passing Engagement

--- a/udacity_students.ipynb
+++ b/udacity_students.ipynb
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -703,14 +703,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
+      "651\n",
+      "4527\n",
       "0\n"
      ]
     }
@@ -726,9 +727,21 @@
     "## who do not.\n",
     "\n",
     "subway_project_lesson_keys = ['746169184', '3176718735']\n",
+    "subway_submissions = [submission for submission in non_udacity_submissions \\\n",
+    "                      if submission.get('lesson_key') in subway_project_lesson_keys]\n",
+    "\n",
+    "passing_subway_accounts = set([submission.get('account_key') for submission in subway_submissions \\\n",
+    "                               if submission.get('assigned_rating') in ('PASSED', 'DISTINCTION')])\n",
+    "\n",
+    "print len(passing_subway_accounts)\n",
     "\n",
     "passing_engagement = []\n",
     "non_passing_engagement = []\n",
+    "\n",
+    "for paid_engagement in paid_engagement_in_first_week:\n",
+    "    for passing_account in passing_subway_accounts:\n",
+    "        if paid_engagement.get('account_key') == passing_account:\n",
+    "            passing_engagement.append(paid_engagement)\n",
     "\n",
     "print len(passing_engagement)\n",
     "print len(non_passing_engagement)"
