--- a/udacity_students.ipynb
+++ b/udacity_students.ipynb
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
      "text": [
       "651\n",
       "4527\n",
-      "0\n"
+      "2392\n"
      ]
     }
    ],
@@ -739,9 +739,10 @@
     "non_passing_engagement = []\n",
     "\n",
     "for paid_engagement in paid_engagement_in_first_week:\n",
-    "    for passing_account in passing_subway_accounts:\n",
-    "        if paid_engagement.get('account_key') == passing_account:\n",
+    "    if paid_engagement.get('account_key') in passing_subway_accounts:\n",
     "            passing_engagement.append(paid_engagement)\n",
+    "    else:\n",
+    "        non_passing_engagement.append(paid_engagement)\n",
     "\n",
     "print len(passing_engagement)\n",
     "print len(non_passing_engagement)"
